<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:linewarplayout="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/getback"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/GetBack"
            android:textColor="#DCDCDC"
            android:textSize="20sp" />
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/input_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/searchbox_bj"
                android:hint="请输入搜索内容"
                android:maxLength="15"
                android:paddingLeft="15dp"
                android:singleLine="true"
                android:textSize="12sp" />


        </RelativeLayout>

        <TextView
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/Search"
            android:textColor="#DCDCDC"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TodayHot"
            />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_margin="15dp"
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SearchHistory"
            />
    </LinearLayout>
    <com.example.forum.View.LineWrapLayout
            android:id="@+id/linewarplayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText1"
            android:layout_below="@+id/editText1"
            android:layout_marginTop="15dp"
            linewarplayout:magin="20"
            linewarplayout:itemBg="@drawable/s_bg">
    </com.example.forum.View.LineWrapLayout>
</LinearLayout>