<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/box"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="17"
        android:background="@color/white"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:id="@+id/home"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/home_img"
                android:src="@drawable/home_pro"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
            <TextView
                android:id="@+id/home_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Home"
                android:textSize="10sp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/circles"
            android:layout_weight="0.8"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/circles_img"
                android:src="@drawable/camera_pro"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
            <TextView
                android:id="@+id/circles_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Circles"
                android:textSize="10sp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/announce"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/announce"
                android:layout_width="38dp"
                android:layout_height="38dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/chitchat"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/chitchat_img"
                android:src="@drawable/baseline_pro"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
            <TextView
                android:id="@+id/chitchat_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Chitchat"
                android:textSize="10sp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/me"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/me_img"
                android:src="@drawable/me_pro"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
            <TextView
                android:id="@+id/me_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Me"
                android:textSize="10sp"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>